app/ui/style.css: fix layout #view overlap

--- a/app/ui/style.css
+++ b/app/ui/style.css
@@ -8,8 +8,8 @@
 html, body {
   width: 100%;
   height: 100%;
-  padding: 0;
-  margin: 0;
+  padding: 0px 0px 0px 0px;
+  margin: 0px 0px 0px 0px;
   display: flex;
   flex: 1;
   flex-direction: column;
@@ -18,7 +18,15 @@ html, body {
 }
 
 #view {
-  flex:1
+  width: 100%;
+  height: 100%;
+  padding: 0px 0px 0px 0px;
+  margin: 22px 0px 0px 0px;
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  background: var(--ag-color-white);
+  font-family: var(--ag-theme-font-family);
 }
 
 #toptop {
@@ -68,7 +76,7 @@ omni-box {
   display: flex;
   flex-direction: column;
   margin: 0px;
-  padding: 0px;
+  padding: 30px;
   border: var(--border-width) solid var(--ag-theme-primary);
   background: var(--ag-theme-background);
   color: var(--ag-theme-text);
